# Tamriel-Translator-Flask

./: .gitignore  README.md  app.py  app.spec  pyproject.toml
dictionaries/: russian_danmeri.json
languages/: aldmeris_russian.json  dunmeri_russian.json  russian_aldmeri.json  russian_aldmeris.json  russian_danmeri.json
static/: style.css
templates/: index.html
